--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
   "author": {
     "name": "Ozgur Ozer",
     "email": "ozgr@live.com",
-    "url": "https://github.com/ozgrozer"
+    "url": "https://github.com/magicdragon1101-ravi"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ozgrozer/ai-renamer.git"
+    "url": "git+https://github.com/magicdragon1101-ravi/ai-renamer.git"
   },
   "dependencies": {
     "axios": "^1.7.2",
